[project]
name = "pinelabs_fin"
authors = [
    { name = "Finstein", email = "bharathiraja.b@finstein.ai" }
]
description = "Pine Labs payments for ERPNext: terminal taps and hosted payment links, with auto Payment Entry on success."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # frappe + erpnext are installed and managed by bench — they are NOT
    # PyPI packages, so they must not be listed here (flit would try to
    # resolve them at build time). The Frappe Cloud version compatibility
    # is declared in [tool.bench.frappe-dependencies] below instead.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Frappe Cloud marketplace version compatibility. Bounded range, comma-
# separated (Frappe's parser requires the comma between restrictions).
# This app targets the v15 line of Frappe + ERPNext.
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF012", # mutable class attributes — common Frappe pattern (read-only constant dicts)
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
